# ElementaryTasks

./: .gitignore  README.md
EighthTask/: CMakeLists.txt  Main.cpp
EighthTask/Application/: Application.cpp  Application.hpp
EighthTask/View/: View.hpp
FifthTask/: CMakeLists.txt  Main.cpp  main.cpp
FifthTask/Application/: Application.cpp  Application.hpp
FifthTask/Main/: Main.hpp
FifthTask/Models/: Prescription.hpp
FifthTask/View/: View.hpp
FirstTask/: CMakeLists.txt  ChessBoard.hpp  Helpers.hpp  Main.cpp  View.hpp  main.cpp
FirstTask/Application/: Application.cpp  Application.hpp
FirstTask/Main/: Main.hpp
FirstTask/Models/Board/: Board.hpp  BoardCreator.hpp  BoardFactory.hpp
FirstTask/Services/: Converter.hpp  ErrorHandler.hpp
FirstTask/Services/ConsoleArgsValidator/: ConsoleArgsValidator.hpp
FirstTask/Services/ConsoleValidator/: ConsoleArgsValidator.hpp  ConsoleValidator.hpp
FirstTask/Services/Converter/: Converter.hpp
FirstTask/Services/Errors/: ErrorCode.hpp  ErrorHandler.hpp
FirstTask/Services/Errors/ErrorCode/: ErrorCode.hpp
FirstTask/Tests/: TestsMain.cpp
FirstTask/Tests/ModelsTests/: BoardCreatorTests.cpp  BoardTests.cpp
FirstTask/View/: View.hpp
FirstTask/ViewModels/: View.hpp  ViewModel.hpp
FourthTask/: CMakeLists.txt  Main.cpp  main.cpp
FourthTask/Application/: Application.cpp  Application.hpp
FourthTask/Main/: Main.hpp
FourthTask/Models/: Prescription.hpp
FourthTask/View/: View.hpp
SecondTask/: Application.cpp  CMakeLists.txt  Envelope.hpp  EnvelopeFunctions.cpp  Main.cpp  View.hpp  main.cpp
SecondTask/Application/: Application.cpp  Application.hpp
SecondTask/Main/: Main.hpp
SecondTask/Models/Envelope/: Envelope.cpp  Envelope.hpp
SecondTask/Models/Envelope/Envelope/: Envelope.cpp  Envelope.hpp
SecondTask/Models/Envelope/EnvelopePlacer/: EnvelopePlacer.hpp
SecondTask/Services/ConsoleInput/: ConsoleInput.hpp
SecondTask/Services/ConsoleInputValidator/: ConsoleInputValidator.hpp
SecondTask/Services/Converter/: Converter.hpp
SecondTask/Services/Errors/: ErrorCode.hpp  ErrorHandler.hpp
SecondTask/Services/Errors/ErrorCode/: ErrorCode.hpp
SecondTask/Tests/ModelsTests/: EnvelopeTests.cpp
SecondTask/Tests/ServicesTests/: ErrorTests.cpp
SecondTask/View/: View.cpp  View.hpp
SecondTask/ViewModels/: View.hpp  ViewModel.cpp  ViewModel.hpp
SeventhTask/: CMakeLists.txt  Main.cpp
SeventhTask/Application/: Application.cpp  Application.hpp
SeventhTask/View/: View.hpp
SixthTask/: CMakeLists.txt  Main.cpp  main.cpp
SixthTask/Application/: Application.cpp  Application.hpp
SixthTask/Models/: LuckyTicketCounter.hpp
ThirdTask/: CMakeLists.txt  Main.cpp  main.cpp
ThirdTask/Application/: Application.cpp  Application.hpp
ThirdTask/Main/: Main.hpp
ThirdTask/Models/Base/: Shape.cpp  Shape.hpp
ThirdTask/Models/Triangle/: Triangle.cpp  Triangle.hpp
ThirdTask/Services/ConsoleInputValidator/: ConsoleInputValidator.hpp
ThirdTask/Services/Converter/: Converter.hpp
ThirdTask/Services/Errors/: ErrorHandler.hpp
ThirdTask/Services/StringCleaner/: StringCleaner.hpp
ThirdTask/Services/StringSpliter/: StringSpliter.hpp  StringSplitter.hpp
ThirdTask/Tests/: TestsMain.cpp
ThirdTask/Tests/ModelsTests/: TriangleTests.cpp
ThirdTask/Tests/ServicesTests/: ConsoleInputValidatorTests.cpp  StringCleanerTests.cpp  StringSplitterTests.cpp
ThirdTask/View/: View.cpp  View.hpp
ThirdTask/ViewModel/: ViewModel.cpp  ViewModel.hpp
(+46 files in other folders)
